# Punctual

./: .gitignore  .gitmodules  .purs-repl  BUILDING.md  Benchmarks.hs  CHANGELOG.md  Main.hs  Makefile  MusicW-audioWorklets.js  Punctual.cabal  README.md  REFERENCE.md  STATUS.md  benchmarks.html  default.nix  dktr0.punctual  exolang.js  index-0.5.html  index.html  lib.js  libraryTest.punctual  out.frefs.js  out.frefs.json  out.stats  package-lock.json  package.json  packages.dhall  punctual.cabal  punctual.js  rts.js  spago.dhall  stack.yaml  style.css
Sound/Punctual/: Action.hs  AsyncProgram.hs  AudioTime.hs  DefTime.hs  Definition.hs  Duration.hs  Evaluation.hs  Extent.hs  FragmentShader.hs  GL.hs  Graph.hs  MovingAverage.hs  Output.hs  Parser.hs  Phasor.hs  Program.hs  PunctualState.hs  PunctualW.hs  Sample.hs  Statement.hs  Target.hs  Tests.hs  Token.hs  Transition.hs  Types.hs  WebGL.hs
archive/0.4.9.3/: lib.js  style.css
archive/0.5.1/: index.html
archive/0.5.1.2/: index.html  punctual.js
archive/0.5.1.3/: punctual.js
archive/0.5.1.4/: index.html  punctual.js
archive/0.5.1.5/: index.html
archive/0.5.2/: index.html  punctual.js
archive/0.5.2.2/: index.html  punctual.js  style.css
archive/0.5.2.3/: index.html  punctual.js
benchmark/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
benchmark/packagedb/ghcjs-8.6.0.1/: package.cache  punctual-0.0.0.1-inplace.conf
executable-src/: Main.hs  MovingAverage.hs
library-src/Sound/: Punctual.hs
library-src/Sound/Punctual/: Action.hs  AsyncProgram.hs  DefTime.hs  Duration.hs  FragmentShader.hs  GL.hs  GLSL.hs  GLSLExpr.hs  Graph.hs  Output.hs  Parser.hs  Program.hs  PunctualW.hs  Resolution.hs  Test.hs  Tests.hs  Texture.hs  Token.hs  Transition.hs  WebGL.hs  Webcam.hs
src/: AST.purs  Action.purs  AudioAnalyser.js  AudioAnalyser.purs  AudioPanning.purs  AudioWorklet.js  AudioWorklet.purs  AudioZone.purs  Channels.purs  DateTime.purs  DefTime.purs  Duration.purs  Expr.purs  FragmentShader.purs  G.purs  GL.js  GL.purs  GLSL.purs  GLSLExpr.purs  Main.purs  Matrix.purs  Multi.purs  MultiMode.purs  NewSignal.purs  NonEmptyList.purs  Number.js  Number.purs  Output.purs  Parser.purs  Program.purs  SharedResources.js  SharedResources.purs  Signal.purs  TokenParser.purs  Transition.purs  Value.purs  Variant.purs  W.purs  WebAudio.js  WebAudio.purs  (+6 more)
test/: Main.purs
tests/: Tests.hs
