name:                Punctual
version:             0.0.0.1
synopsis:            Live coding language
description:         Please see README.md
homepage:            http://github.com/d0kt0r0/Punctual/blob/master/README.md
license:             GPL-3
license-file:        LICENSE
author:              David Ogborn
maintainer:          ogbornd@mcmaster.ca
copyright:           2018 David Ogborn
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

executable Punctual
  hs-source-dirs:    .
  main-is:           Main.hs
  build-depends:     base, reflex, reflex-dom, parsec, musicw, time
  default-language:  Haskell2010
