name:                punctual
version:             0.0.0.1
synopsis:            Live coding language
description:         Please see README.md
homepage:            http://github.com/d0kt0r0/Punctual/blob/master/README.md
license:             GPL-3
license-file:        LICENSE
author:              David Ogborn
maintainer:          ogbornd@mcmaster.ca
copyright:           2018-19 David Ogborn
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

Library
  hs-source-dirs:    .
  Build-Depends:
      base,
      parsec,
      time,
      mtl,
      musicw >= 0.3.1,
      containers,
      ghcjs-base,
      ghcjs-dom-jsffi,
      text,
      text-show,
      haskellish >= 0.1.1,
      haskell-src-exts >= 1.21.0
  GHC-Options:       -Wall -fwarn-tabs -fno-warn-unused-do-bind
  Exposed-modules:   Sound.Punctual.Graph
                     Sound.Punctual.Extent
                     Sound.Punctual.Types
                     Sound.Punctual.Evaluation
                     Sound.Punctual.Parser
                     Sound.Punctual.PunctualState
                     Sound.Punctual.WebGL
                     Sound.Punctual.PunctualW
  other-modules:     Sound.Punctual.Token
  default-language:  Haskell2010

executable punctual
  hs-source-dirs:    .
  main-is:           Main.hs
  build-depends:
      base,
      punctual,
      reflex,
      reflex-dom,
      time,
      parsec,
      mtl,
      musicw >= 0.3.1,
      text,
      containers,
      ghcjs-base,
      ghcjs-dom-jsffi,
      reflex-dom-contrib,
      text,
      text-show,
      haskellish >= 0.1.1,
      haskell-src-exts >= 1.21.0
  default-language:  Haskell2010
