name:                punctual
version:             0.4.9.2
synopsis:            Live coding language
description:         Please see README.md
homepage:            http://github.com/dktr0/Punctual/blob/master/README.md
license:             GPL-3
license-file:        LICENSE
author:              David Ogborn
maintainer:          ogbornd@mcmaster.ca
copyright:           2018-23 David Ogborn
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

source-repository head
  type: git
  location: https://github.com/dktr0/punctual.git

Library
  hs-source-dirs:    library-src
  Build-Depends:
      base,
      time,
      mtl,
      musicw >= 0.3.11 && <0.4,
      containers,
      ghcjs-base,
      ghcjs-dom-jsffi,
      text,
      text-show,
      haskellish >= 0.3.1,
      haskell-src-exts >= 1.21.0,
      transformers,
      deepseq,
      split >= 0.2.3.3 && < 0.3,
      tempi >= 1.0.1.1 && < 1.1
  GHC-Options:       -Wall -fwarn-tabs -fno-warn-unused-do-bind
  Exposed-modules:   Sound.Punctual.Extent
                     Sound.Punctual.AudioTime
                     Sound.Punctual.Duration
                     Sound.Punctual.Output
                     Sound.Punctual.DefTime
                     Sound.Punctual.Transition
                     Sound.Punctual.Graph
                     Sound.Punctual.Action
                     Sound.Punctual.Program
                     Sound.Punctual.Parser
                     Sound.Punctual.PunctualW
                     Sound.Punctual.GL
                     Sound.Punctual.AsyncProgram
                     Sound.Punctual.FragmentShader
                     Sound.Punctual.Resolution
                     Sound.Punctual.WebGL
                     Sound.Punctual.Texture
                     Sound.Punctual
  other-modules:     Sound.Punctual.GLSL
                     Sound.Punctual.GLSLExpr
                     Sound.Punctual.Webcam
  default-language:  Haskell2010


test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  other-modules:
  build-depends:
      base,
      microspec >= 0.2.1.3,
      punctual,
      containers,
      time
  default-language: Haskell2010


executable punctual
  hs-source-dirs:    executable-src
  main-is:           Main.hs
  build-depends:
      base,
      punctual,
      reflex,
      reflex-dom,
      time,
      mtl,
      musicw >= 0.3.11,
      text,
      containers,
      ghcjs-base,
      ghcjs-dom-jsffi,
      text,
      text-show,
      haskellish >= 0.3,
      haskell-src-exts >= 1.21.0,
      transformers,
      deepseq,
      split >= 0.2.3.3,
      tempi >= 1.0.1.1 && < 1.1,
      keycode
  other-modules: MovingAverage
  default-language:  Haskell2010

benchmark punctual-benchmarks
  build-depends:
      base,
      punctual,
      reflex,
      reflex-dom,
      time,
      mtl,
      musicw >= 0.3.11,
      text,
      containers,
      ghcjs-base,
      ghcjs-dom-jsffi,
      text,
      text-show,
      haskellish >= 0.3,
      haskell-src-exts >= 1.21.0,
      transformers,
      deepseq,
      criterion,
      split >= 0.2.3.3
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   .
  main-is:          Benchmarks.hs
  type:             exitcode-stdio-1.0
